# pytest-requestselapsed

./: README.md  RELEASING.md  pyproject.toml
example/console_output/: main.py  test_case1.py
example/feishu_output/: main.py  test_case2.py
example/readme/: test_case.py
example/use_fixture/: test_case.py
requestselapsed/: api.py  output.py  plugin.py
